--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,51 +1,53 @@
-* {
-    text-decoration: none;
-    list-style: none;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-    
+*
+ {
+  text-decoration: none;
+  list-style: none;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  
+}
+
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+html{
+  p{
+    color: #999;
   }
+}
 
+main{
+  min-height: 100%;
+  width: 100%;
+}
 
-  html, body {
-    height: 100%;
-    margin: 0;
-  }
+body {
+  margin: 0;
+  line-height: 1.4;
+  font-family: 'Roboto', sans-serif;
 
-  html{
-    p{
-      color: #999;
-    }
-  }
-
-  main{
-    min-height: 100%;
+  h1{
+    font-size: 58px;
+    font-weight: 700;
   }
   
-  body {
-    margin: 0;
-    line-height: 1.4;
-    font-family: 'Roboto', sans-serif;
-
-    h1{
-      font-size: 58px;
-      font-weight: 700;
-    }
-    
-    h2{
-      font-size: 24px;
-      font-weight: 600;
-    }
-    
-    h3{
-      font-size: 18.72px;
-      font-weight: 500;
-    }
+  h2{
+    font-size: 24px;
+    font-weight: 600;
   }
-
-  a{
-      color: $color-text;
+  
+  h3{
+    font-size: 18.72px;
+    font-weight: 500;
   }
+}
+
+a{
+    color: $color-text;
+}
