--- a/src/scss/modules/_banner.scss
+++ b/src/scss/modules/_banner.scss
@@ -11,30 +11,8 @@
 
     &__banner{
         position: relative;
-        width: 85%;
         background-color: $color-banner;
         margin: auto;
-
-        
-        &__bottom--container {
-            background-image: url(../homepage/resources/deals_image.jpg);
-            background-size: cover;
-            background-position: center;
-            position: relative;
-            text-align: left;
-            height: 450px;
-
-            &--wrapper{
-                width: 350px;
-                margin: auto;
-                width: 90%;
-
-                > a {
-                    position: absolute;
-                    bottom: 12%;
-                }
-            }
-        }
 
         &__top--container {
             background-image: url(../homepage/resources/abc.jpg);
@@ -48,12 +26,12 @@
             text-align: left;
             height: 100vh;
 
-            .icon {
+            .topicon {
                 position: absolute;
                 margin: auto;
                 height: 80px;
                 bottom: 0;
-                border-top: 1px solid rgb(230, 230, 230);
+                border-top: 1px  solid rgb(230, 230, 230);
                 width: 100%;
                 text-align: center;
                 
@@ -75,6 +53,160 @@
                 > p {
                     color: #f3beb5;
                     font-size: 130%;
+                }
+            }
+        }
+
+        &__secondary {
+            height: 60vh;
+            width: 100%;
+
+                
+
+            > div {    
+            height: 20vh;
+            margin: 0 0;
+            font-size: 80%;
+
+             > div {
+                 padding: 5px 5vw;
+                 
+             }
+
+                h2{
+                    margin-bottom: 5px;
+                    
+                  font-size: 180%;
+                }
+            
+            }
+
+            &--container--left{
+                background-image: url(../homepage/resources/banner_h1_1.jpg);
+                background-color: gold;
+                background-size: cover; 
+                background-position: center;
+                background-repeat: no-repeat;
+                height: 33vh;
+            }
+
+            &--container--white{
+                background-image: url(../homepage/resources/banner_h1_2.jpg);
+                background-size: cover;
+                background-position: center;
+                text-align:center;
+                *, a, p {
+                    color: #fff;
+                    margin: 0px 0px;
+                } 
+
+                a, h2 {
+                    margin: 0 0;
+                }
+
+                p{
+                    font-size: 80%;
+                }
+            }
+
+            &--container--right{
+                background-image: url(../homepage/resources/banner_h1_3.jpg);
+                background-size: cover;          
+                height: 100%;       
+                text-align: right;
+
+                h2, p, a {
+                    margin: 0;
+                }
+                
+            }
+        
+
+
+            @media screen and (min-width: 800px){
+                
+
+                > div {    
+                    height: 300px;
+                    }
+
+                &--container--left{
+                    background-image: url(../homepage/resources/banner_h1_1.jpg);
+                    background-size: cover; 
+                    background-position: right;
+                    width: 33.33%;
+                    float: left;
+                    height: 100%;
+
+                    * p, h2
+                    {
+                        margin: 1em 0;
+                        margin-top: 60px;
+                    }
+                    
+
+                    
+                }
+            
+                &--container--white{
+                    background-image: url(../homepage/resources/banner_h1_2.jpg);
+                    background-size: cover;
+                    background-position: center;
+                    width: 33.33%;
+                    float: left;
+                    text-align: center;
+                    height: 100%;
+                    *, a, p {
+                        color: #fff;
+                        margin: 0px 0px;
+                    } 
+
+                    a, h2 {
+                        margin: 1em 0;
+                    }
+
+                    p{
+                        margin-top: 60px;
+                        font-size: 80%;
+                    }
+                }
+
+                &--container--right{
+                    background-image: url(../homepage/resources/banner_h1_3.jpg);
+                    background-size: cover;
+                    width: 33.33%;                        
+                    float: right;
+                    height: 100%;
+                    text-align: right;
+
+                    
+                    *{
+                        margin: 0px 0px;
+                        margin-left: 18vw;
+                    } 
+                }
+            }
+        }
+        
+
+        &__bottom--container {
+            background-image: url(../homepage/resources/deals_image.jpg);
+            background-size: cover;
+            background-position: center;
+            position: relative;
+            text-align: left;
+            height: 450px;
+            display: inherit;
+            padding-top: 50px;
+
+            &--wrapper{
+                width: 350px;
+                margin: auto;
+                width: 90%;
+
+                > a {
+                    position: absolute;
+                    bottom: 12%;
                 }
             }
         }
@@ -107,14 +239,54 @@
 @media screen and (min-width: 800px){
     .main{
         &__banner{
+            
+            
             width: 100%;
             &__bottom--container {
                 &--wrapper{
                     margin-left: 20%;
+                    width: 500px;
                 }
             }
             &__top--container {
-                background-size: cover;
+                background-size: 110%;
+                background-position-x: 50px;
+                background-position-y: center;
+                height: 90vh;
+
+                .topicon{
+                    position: absolute;
+                    width: 50px;
+                    left: 0;
+                    top: 0;
+                    border: none;
+                    
+                    > ul > li {
+                        display: block;
+                        text-align: left;
+                        height: 100%;
+                        margin: 5px 0;
+                    }
+                }
+
+                &--wrapper{
+                    padding-top: 20vh;
+                    margin-left: 60%; 
+                    height: 600px;
+                    width: 300px;
+
+                    > p {
+                        margin: 0;
+                        font-size: 90%;
+                    }
+
+                    > h1 {
+                        font-size: 5.5em;
+                        line-height: 1.1em;
+                        margin: 20px 0;
+                        letter-spacing: 0.1em;
+                    }
+                }
             }
         }
     }
