--- a/src/about/style.css
+++ b/src/about/style.css
@@ -158,13 +158,32 @@ nav {
   padding-right: 20%;
 }
 .section8 {
-  padding-right: 20%;
   background-color: whitesmoke;
+  padding: 50px 19% 50px 21%;
+  margin-bottom: 100px;
 }
 .brand {
   width: 12%;
-  padding: 100px 20px 100px 20px;
+  padding-right: 20px;
+  padding-left: 20px;
   background-color: white;
+
+}
+.brand1 {
+  padding-top: 37px;
+  padding-bottom: 40px;
+}
+.brand2 {
+  padding-top: 23px;
+  padding-bottom: 30px;
+}
+.brand3 {
+  padding-top: 11px;
+  padding-bottom: 10px;
+}
+.brand4 {
+  padding-top: 28px;
+  padding-bottom: 30px;
 }
 .section-title {
   padding-bottom: 50px;
