--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,10 @@
   vertical-align: baseline;
 }
 
+#bannerb {
+  width: 100%;
+}
+
 html, body {
   height: 100%;
   margin: 0;
@@ -699,6 +703,61 @@ a {
   }
 }
 
+#newsletter {
+  padding: 15px;
+  color: #222;
+  background: #fff;
+  padding-bottom: 100px;
+  width: 100%;
+  max-height: 200px;
+}
+
+#newsletter h2 {
+  float: left;
+  font-size: 29px;
+  margin: 0;
+}
+
+#newsletter p {
+  float: left;
+  font-size: 16px;
+  clear: both;
+}
+
+#newsletter form {
+  float: right;
+}
+
+#newsletter input[type=email] {
+  padding: 4px;
+  height: 50px;
+  width: 250px;
+}
+
+form {
+  color: #999;
+  border-bottom: 1px solid #ddd;
+}
+form button {
+  background-color: #fff;
+  border: none;
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+#newsletter input {
+  border: none;
+}
+
+@media screen and (max-width: 800px) {
+  #newsletter {
+    clear: both;
+  }
+  #newsletter input {
+    align-self: auto;
+  }
+}
 @media screen and (max-width: 800px) {
   .main, .footer {
     padding: 0 7.5%;
@@ -730,6 +789,12 @@ a {
 /* retourner une image */
 .reverse {
   transform: rotateZ(90deg);
+}
+
+@media screen and (max-width: 800px) {
+  #bannerb {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
