--- a/src/css/store.css
+++ b/src/css/store.css
@@ -25,11 +25,12 @@ body {
     text-transform: capitalize;
     line-height: 70px;
     font-size: 1.5em;
-    margin-bottom: 5%; }
+    position: relative; }
   html main {
     width: 75%;
     margin-left: auto;
-    margin-right: auto; }
+    margin-right: auto;
+    margin-top: 5%; }
     html main article section .grid-container {
       display: grid;
       grid-template-columns: 1fr 1fr;
