--- a/src/scss/store.scss
+++ b/src/scss/store.scss
@@ -32,12 +32,14 @@ body {
             text-transform: capitalize;
             line-height: 70px;
             font-size: 1.5em;
-            margin-bottom: 5%;
+            position: relative;
+           
         }
         main {
             width: 75%;
             margin-left: auto;
             margin-right: auto;
+            margin-top: 5%;
             article {
                 section {
                     .grid-container {
